<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearlayout_activitymain">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_nav"
            android:elevation="10dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        </androidx.appcompat.widget.Toolbar>

<!-- Frame Layout ma nam blokować obszar ekranu, żeby coś wyświelić, więc blokujemy to pod NavigationBar -->
<!-- zaraz pod nav_header. Powinien nam przechowywać jeden obiekt typu child, żeby było łatwiej-->

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container">


            <TextView
                android:id="@+id/wybranie_kota"
                style="@style/TextViewTiitleFragments"
                android:text="@string/activity_main_info"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"/>
        </FrameLayout>



    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/pełny_widok_navigation"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        android:background="@color/second_background"
        app:itemTextAppearance="@style/TextViewDrawerMenu"/>
    <!-- 1. podpięcie drawer_menu jako menu oraz nav_header jako "głowy" całego layout navigation bar -->



</androidx.drawerlayout.widget.DrawerLayout>