...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zabiegi_panel_kota"
        app:layout_constraintTop_toBottomOf="@+id/leki_edit_text" />

    <CheckBox
        android:id="@+id/ZAPISZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        style="@style/TextViewDrawerMenu"
        android:text="zapisz"
        app:layout_constraintBottom_toBottomOf="parent"
...
